@@ -72,7 +72,7 @@
 
 #tools {
 	background: #E8E8E8;
-	height: 534px;
+	height: 580px;
 	border: 1px solid #808080;
 	padding: 4px;
 }
